232 ==> 430876 - Rename images without changing any properties.
233 ==> 430995 - No video preview or thumbnails for any video content.
234 ==> 431013 - Not all databases will be saved when using the --database-directory option.
235 ==> 415617 - Color management profile path uses previous appimage mount point.
236 ==> 430986 - Setting up Eudora email app.
237 ==> 430949 - digiKam-7.2.0-beta2 (macOS (DMG)) breaks existing local MySQL/MariaDB instances on upgrade.
238 ==> 430985 - New beta release doesn´t start.
239 ==> 430996 - Yolo v3 causes application to crash with 32 bits version.
240 ==> 431108 - Online Handbook... Launches Irrelevant Documentation.
241 ==> 431095 - Make "scan for new items" collection sensitive.
242 ==> 431117 - Selected GPX File Colour Is Grayed Out When Selected.
243 ==> 431070 - Filetype .wmf can't be displayed.
244 ==> 431081 - Exif data is completely lost for some pictures after detect faces / recognize faces.
245 ==> 431119 - Move Map To First Point In Selected GPX Track.
246 ==> 431047 - Missing icons in the map view.
247 ==> 431162 - Change Name of Auto Correction to "Lens Auto-Correction".
248 ==> 431003 - Running status of digikam not reflected in MacOS task bar.
249 ==> 431102 - Windows install does not have an icon for digiKam.
250 ==> 424727 - "Failed to connect to camera" error with iPhone 6s.
251 ==> 380323 - Apply ratings with keyboard shortcuts.
252 ==> 426997 - Automatic upgrading.
253 ==> 429792 - Face tag name completion with arrow keys fails.
254 ==> 430671 - Add a Face Tag: default action for Enter key should be the highlighted tag.
255 ==> 431188 - Add a Face Tag: Keyboard navigation to select from autocomplete dropdown doesn't work.
256 ==> 431357 - Face attribution doesn't get the name selected in the contextual menu.
257 ==> 431355 - There is no button to add Tag to picture.
258 ==> 297291 - Allow to quick edit metadata using keyboard shortcuts.
259 ==> 