@@ -71,7 +71,16 @@ public:
      * version of text.
      * @param text the original (not-squeezed) text to check for
      */
-    bool contains(const QString& text)              const;
+    bool contains(const QString& text)                               const;
+
+    /**
+     * Returns the index of the combobox if found the original (not-squeezed)
+     * version of text.
+     * @param text the original (not-squeezed) text to find for
+     * @param cs case sensitive or case insensitive search
+     */
+    int findOriginalText(const QString& text,
+                         Qt::CaseSensitivity cs = Qt::CaseSensitive) const;
 
     /**
      * This inserts a item to the list. See QComboBox::insertItem()
@@ -116,19 +125,19 @@ public:
      * highlighted item.
      * @return full text of the highlighted item
      */
-    QString itemHighlighted()                       const;
+    QString itemHighlighted()                                        const;
 
     /**
      * This method returns the full text (not squeezed) for the index.
      * @param index the position in the widget.
      * @return full text of the item
      */
-    QString item(int index)                         const;
+    QString item(int index)                                          const;
 
     /**
      * Sets the sizeHint() of this widget.
      */
-    QSize sizeHint()                                const override;
+    QSize sizeHint()                                                 const override;
 
 private Q_SLOTS:
 
@@ -137,11 +146,11 @@ private Q_SLOTS:
 
 private:
 
-    void    resizeEvent(QResizeEvent*)                    override;
-    QString squeezeText(const QString& original)    const;
+    void    resizeEvent(QResizeEvent*)                                     override;
+    QString squeezeText(const QString& original)                     const;
 
     /// Prevent these from being used.
-    QString currentText()                           const;
+    QString currentText()                                            const;
     void    setCurrentText(const QString& itemText);
     void    insertItem(const QString& text);
     void    insertItem(qint32 index, const QString& text);
@@ -155,7 +164,7 @@ private:
                     const QString& text,
                     const QVariant& userData = QVariant());
     void    addItems(const QStringList& texts);
-    QString itemText(int index)                     const;
+    QString itemText(int index)                                      const;
 
 private:
 
