@@ -277,4 +277,5 @@ BUGFIXES:
 256 ==> 431357 - Face attribution doesn't get the name selected in the contextual menu.
 257 ==> 431355 - There is no button to add Tag to picture.
 258 ==> 297291 - Allow to quick edit metadata using keyboard shortcuts.
-259 ==> 
+259 ==> 431369 - Lens search uses only exact match (as I see).
+260 ==> 
